--- a/Frontend/TripSync/src/pages/Home/Home.css
+++ b/Frontend/TripSync/src/pages/Home/Home.css
@@ -27,3 +27,12 @@
     font-size: 30px;
     color: aquamarine;
   }
+
+.NavbarSignedIn {
+  visibility:hidden;
+}
+
+.Navbar{
+  visibility:hidden;
+
+}
