--- a/Frontend/TripSync/src/Components/AgencyNav/AgencyNav.css
+++ b/Frontend/TripSync/src/Components/AgencyNav/AgencyNav.css
@@ -35,17 +35,23 @@ nav {
   
     color:black;
   }
-  .nav-links a[href="#Home"]
-  {
-    background-color:blue; 
-    color: black!important;
-    
-  }
+
   .nav-links a:hover
   {
     color:blue; 
     transition: 0.6s;
   }
-  .nav-links a:last-child {
-    margin-right: 0;
+  .nav-links a {
+    text-decoration: none;
+    color: black;
+    margin-right: 10px;
   }
+  
+  .nav-links .active {
+    background-color:blue; 
+    font-weight: bold;
+  
+  }
+  /* .nav-links a:last-child {
+    margin-right: 0;
+  } */
