--- a/Frontend/TripSync/src/Components/TourCard/TourCard.css
+++ b/Frontend/TripSync/src/Components/TourCard/TourCard.css
@@ -58,3 +58,44 @@
   {
     background-color:blue;
   }
+
+.original-price {
+  text-decoration: line-through;
+  color: #999;
+  margin-right: 10px;
+}
+
+.sale-price {
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+}
+
+.price {
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+}
+.sale-badge {
+  position: absolute;
+ 
+  top: 0px;
+  left: 0px;
+  background-color: blue; /* Adjust color as needed */
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+.sale-image {
+  position: relative;
+}
+
+.sale-image::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(blue, 0, 0, 0.7), transparent); /* Adjust color and opacity */
+}
