--- a/Frontend/TripSync/src/pages/Home/Home.css
+++ b/Frontend/TripSync/src/pages/Home/Home.css
@@ -36,3 +36,11 @@
   visibility:hidden;
 
 }
+.video-player {
+  /* position: absolute;
+  top: 0;
+  left: 0; */
+  width: 100%;
+  height: 90%;
+  object-fit: cover;
+}
