start  of rewards in backend

--- a/Frontend/TripSync/src/pages/Review/Review.css
+++ b/Frontend/TripSync/src/pages/Review/Review.css
@@ -1,12 +1,12 @@
 /* Reset Styles */
-body {
+/* body {
     font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 50px;
     height: 100%;
-  }
+  } */
   .titleReview{
     margin-top: 200px;
     margin-bottom: 30px;
