--- a/Frontend/TripSync/src/pages/Tours/Tours.css
+++ b/Frontend/TripSync/src/pages/Tours/Tours.css
@@ -1,3 +1,11 @@
-.flex{
+/* .flex{
     display: flex;
-}
+} */
+.flex {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+  }
+  
+ 
+  
