--- a/Frontend/TripSync/src/Components/trav-prof/SideBar/SideBar.css
+++ b/Frontend/TripSync/src/Components/trav-prof/SideBar/SideBar.css
@@ -2,7 +2,7 @@
 .Side-Bar {
   height: 100vh;
   width: 25%;
-  background-color: #2F80ED;
+  background-color: #3344ff;
   color: #ecf0f1;
   display: flex;
   flex-direction: column;
