--- a/Frontend/TripSync/src/pages/register/register.css
+++ b/Frontend/TripSync/src/pages/register/register.css
@@ -4,8 +4,10 @@
 .containerregform {
     /* background: linear-gradient(to right, #6a11cb, #2575fc); */
     color: #fff;
-    padding: 20px;
+    /* padding: 20px; */
     border-radius: 15px;
+    /* margin-top: 100px; */
+    /* padding-bottom: 100px; */
   }
   
   /* Card Styling */
@@ -31,8 +33,8 @@
   }
   
   .form-control:focus {
-    border-color: #6a11cb;
-    box-shadow: 0 0 0 0.2rem rgba(106, 17, 203, 0.25);
+    border-color: #443ef6;
+    box-shadow: 0 0 0 0.2rem rgba(54, 168, 244, 0.25);
   }
   
   /* Labels */
@@ -93,3 +95,11 @@
     font-style: italic;
     color: #6c757d;
   }
+  #Address,#Description,#PhoneNumber,#Country,#profileName,#Location,#userName {
+    border: 1px solid #ced4da;
+    padding: 5px;
+    font-size: 14px;
+    border-radius: 10px;
+  }
+  
+  
