--- a/Frontend/TripSync/src/pages/register/register.css
+++ b/Frontend/TripSync/src/pages/register/register.css
@@ -1,16 +1,8 @@
-/* Register.css */
-
-/* Page Styling */
 .containerregform {
-    /* background: linear-gradient(to right, #6a11cb, #2575fc); */
     color: #fff;
-    /* padding: 20px; */
     border-radius: 15px;
-    /* margin-top: 100px; */
-    /* padding-bottom: 100px; */
   }
   
-  /* Card Styling */
   .card {
     background-color: #ffffff;
     border: none;
@@ -23,7 +15,6 @@
     color: #4a4a4a;
   }
   
-  /* Input Fields */
   .form-control {
     border-radius: 10px;
     font-size: 14px;
@@ -37,14 +28,12 @@
     box-shadow: 0 0 0 0.2rem rgba(54, 168, 244, 0.25);
   }
   
-  /* Labels */
   .form-label {
     font-size: 14px;
     color: #6c757d;
     margin-bottom: 5px;
   }
   
-  /* Buttons */
   .btnReg {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #fff;
@@ -62,7 +51,6 @@
     transition: 15ms;
   }
   
-  /* Profile Photo Input */
   #profilephoto {
     border: 1px solid #ced4da;
     padding: 5px;
@@ -70,14 +58,12 @@
     border-radius: 10px;
   }
   
-  /* Optional Label Styling */
   label.mx-5 {
     font-size: 12px;
     font-style: italic;
     color: #6c757d;
   }
   
-  /* Mobile Responsiveness */
   @media (max-width: 576px) {
     .card {
       width: 90%;
@@ -95,11 +81,16 @@
     font-style: italic;
     color: #6c757d;
   }
-  #Address,#Description,#PhoneNumber,#Country,#profileName,#Location,#userName {
+  #Address,#Description,#PhoneNumber,#Country,#profileName,#Location,#userName,#pass,#email {
     border: 1px solid #ced4da;
     padding: 5px;
     font-size: 14px;
     border-radius: 10px;
+    background-color: #e8f3fd;
   }
-  
+  input::placeholder {
+    color: rgb(243, 239, 239);
+    font-style: italic;
+    font-size: 14px;
+  }
   
