--- a/Frontend/TripSync/src/pages/Blogs/Blogs.css
+++ b/Frontend/TripSync/src/pages/Blogs/Blogs.css
@@ -8,4 +8,7 @@
     flex-direction: column;
     /* gap: 20px; Adds vertical space between Blog components */
   }
-  
+  .newBlog::placeholder{
+    color: rgb(102, 101, 101);
+    font-size: 16px;
+  }
