--- a/Frontend/TripSync/src/pages/Home/Home.css
+++ b/Frontend/TripSync/src/pages/Home/Home.css
@@ -9,13 +9,14 @@
   }
   
   .text-overlay {
+
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-60%, -500%);
     color: white;
     /* padding: 10px 20px; */
-    font-size: 30px;
+    font-size: 50px;
   }
   .text-overlay-sub {
     position: absolute;
@@ -43,4 +44,18 @@
   width: 100%;
   height: 90%;
   object-fit: cover;
+}
+.AboutUs{
+    margin-top: 50px;
+    margin-left: 30px;
+    margin-bottom: 75px;
+
+}
+.txt1,.txt2{
+  margin-left: 7px;
+  font-size: 18px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.head2{
+margin-bottom: 50px;
 }
