--- a/Frontend/TripSync/src/pages/sign_in/sign_in.css
+++ b/Frontend/TripSync/src/pages/sign_in/sign_in.css
@@ -43,12 +43,13 @@
     padding: 10px 15px;
     border: 1px solid #ced4da;
     transition: box-shadow 0.3s ease, border 0.3s ease;
+    color: black !important;
   }
   
-  .form-control:focus {
+  /* .form-control:focus {
     border-color: #007bff;
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-  }
+  } */
   
   /* Labels */
   .form-label {
