--- a/Frontend/TripSync/src/pages/AddNewTour/AddNewTour.css
+++ b/Frontend/TripSync/src/pages/AddNewTour/AddNewTour.css
@@ -1,6 +1,6 @@
 /* AddNewTour.css */
 
-.add-new-tour-container {
+/* .add-new-tour-container {
     width: 100%;
     max-width: 700px;
     margin: 3rem auto;
@@ -117,15 +117,15 @@
   div > input {
     width: calc(100% - 22px);
     margin-right: 1rem;
-  }
+  } */
   
   /* div > button {
     width: 100%;
   } */
   
-  h4 {
+  /* h4 {
     font-size: 1.2rem;
     font-weight: normal;
     color: #333;
   }
- 
+  */
