--- a/Frontend/TripSync/src/pages/Traveller_Prof/TravellerProf.css
+++ b/Frontend/TripSync/src/pages/Traveller_Prof/TravellerProf.css
@@ -9,3 +9,12 @@
     width: 70%;
     left: 30%;
 }
+
+.user-not-found-message {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+}
