--- a/Frontend/TripSync/src/Components/trav-prof/TripsCard/TripsCard.css
+++ b/Frontend/TripSync/src/Components/trav-prof/TripsCard/TripsCard.css
@@ -98,7 +98,7 @@
 }
 
 .trip-button {
-  background-color: #007bff;
+  background-color:#2F80ED;
   color: #fff;
   border: none;
   padding: 10px 20px;
@@ -110,8 +110,10 @@
 }
 
 .trip-button:hover {
-  background-color: #0056b3;
+  background-color:#2969BF;
 }
+
+
 
 
 @media (max-width: 768px) {
