--- a/Frontend/TripSync/src/Components/trav-prof/SideBar/SideBar.css
+++ b/Frontend/TripSync/src/Components/trav-prof/SideBar/SideBar.css
@@ -2,7 +2,7 @@
 .Side-Bar {
   height: 100vh;
   width: 25%;
-  background-color: #3344ff;
+  background: linear-gradient(180deg,#2969BF,#144E9D);
   color: #ecf0f1;
   display: flex;
   flex-direction: column;
@@ -12,8 +12,8 @@
  
   transition: all 0.3s ease;
   overflow: hidden;
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
+  /* border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px; */
 
 }
 
