--- a/Frontend/TripSync/src/Components/trav-prof/UserTrips/UserTrips.css
+++ b/Frontend/TripSync/src/Components/trav-prof/UserTrips/UserTrips.css
@@ -30,14 +30,14 @@
   position: absolute;
   width: 100%;
   height: 3px;
-  background: linear-gradient(90deg, #6a11cb, #2575fc);
+  background: linear-gradient(180deg,#2969BF,#144E9D);
   left: 0;
   bottom: -8px;
   border-radius: 3px;
 }
 
 .total-trips-button {
-  background: linear-gradient(90deg, #6a11cb, #2575fc);
+  background: linear-gradient(180deg,#2969BF,#144E9D);
   color: white;
   font-size: 16px;
   padding: 10px 25px;
@@ -71,7 +71,7 @@
 
 
 .arrow-rewards {
-  background:#3344ff;
+  background-color:#2F80ED;
   color: white;
   font-size: 18px;
   width: 40px;
@@ -122,7 +122,7 @@
 }
 
 .dot.active {
-  background: #2575fc;
+  background-color:#2F80ED;
   transform: scale(1.2);
 }
 
