--- a/Frontend/TripSync/src/pages/RewardsList/RewardsList.css
+++ b/Frontend/TripSync/src/pages/RewardsList/RewardsList.css
@@ -1,4 +1,4 @@
-.reward-card {
+/* .reward-card {
   width: 300px;
   height: 450px;
   background: linear-gradient(145deg, #ffffff, #f3f3f3);
@@ -84,4 +84,4 @@
   gap: 20px;
   padding: 20px;
   background-color: #f9f9f9;
-}
+} */
