--- a/Frontend/TripSync/src/Components/trav-prof/TripsCard/TripsCard.css
+++ b/Frontend/TripSync/src/Components/trav-prof/TripsCard/TripsCard.css
@@ -8,8 +8,12 @@
   overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   width: 300px;
+  /* width: fit-content; */
   min-height: 450px;
   height: fit-content;
+  /* height: 500px; */
+  margin-bottom: 20px;
+  align-items: stretch;
 }
 
 .trip-card:hover {
@@ -37,6 +41,7 @@
   padding: 15px;
   background: linear-gradient(to right, #ffffff, #f7f9fc);
   padding: 20px;
+  position: relative;
 }
 
 .trip-header {
@@ -58,6 +63,8 @@
   padding: 5px 10px;
   border-radius: 12px;
   text-align: center;
+  position: absolute;
+  right: 15px;
 }
 
 .trip-status.not-started {
@@ -151,3 +158,4 @@
 
 
 
+insert into rewards values (4,5,'https://m.media-amazon.com/images/I/610bskwf-wL.__AC_SY300_SX300_QL70_ML2_.jpg','Flash memory',100,general)
