--- a/Frontend/TripSync/src/pages/AllAgencies/AllAgencies.css
+++ b/Frontend/TripSync/src/pages/AllAgencies/AllAgencies.css
@@ -12,3 +12,14 @@
     margin: 50px;
     font-size: 25px; 
 }
+/* AllAgencies.css */
+.agency-card-container {
+    cursor: pointer;
+  }
+  
+  .agency-card-container:hover {
+    background-color: #f0f0f0;
+    transform: scale(1.02);
+    transition: all 0.3s ease;
+  }
+  
