--- a/Frontend/TripSync/src/pages/Home/Home.css
+++ b/Frontend/TripSync/src/pages/Home/Home.css
@@ -12,7 +12,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 100vw;
+    /* width: 100vw; */
+    width:100%;
     transform: translate(-60%, -500%);
     color: white;
     opacity:.65;
