--- a/Frontend/TripSync/src/Components/Admin/CreateAdmin/CreateAdmin.css
+++ b/Frontend/TripSync/src/Components/Admin/CreateAdmin/CreateAdmin.css
@@ -14,6 +14,9 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  width: 75%;
+  position: absolute;
+  right: 0px;
   background-color: var(--background-color);
   padding: 20px;
   box-sizing: border-box;
