--- a/Frontend/TripSync/src/Components/trav-prof/UserMessages/UserMessages.css
+++ b/Frontend/TripSync/src/Components/trav-prof/UserMessages/UserMessages.css
@@ -228,3 +228,82 @@ background-color: aliceblue;
 .message-form button:hover {
   background-color: #0056b3;
 }
+
+
+/*-------------- send message from foreign ---------------*/
+.send-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.send-close-button {
+  position: absolute;
+  top: 40%;
+  right: 23%;
+  background: #a4a4a4;
+  border: none;
+  color: rgb(0, 0, 0);
+  font-size: 18px;
+  font-weight: bold;
+  padding: 5px 10px;
+  border-radius: 40%;
+  cursor: pointer;
+  transition: transform 0.2s ease, background 0.3s ease;
+}
+
+.send-close-button:hover {
+  transform: scale(1.2);
+  background: #737070;
+}
+
+
+.send-userMessages-container {
+  display: flex;
+  width: 50%;
+  height: 75px;
+  background: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+}
+
+.send-chat-container {
+  width: 100%;
+}
+
+
+.send-message-form {
+  display: flex;
+  border-top: 1px solid #ccc;
+  padding: 10px;
+  background-color: #fff;
+}
+
+.send-message-form input {
+  flex: 1;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-right: 10px;
+}
+
+.send-message-form button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.send-message-form button:hover {
+  background-color: #0056b3;
+}
