--- a/Frontend/TripSync/src/pages/AddNewTour/AddNewTour.css
+++ b/Frontend/TripSync/src/pages/AddNewTour/AddNewTour.css
@@ -1,4 +1,4 @@
-/* Add general form container styling */
+Add general form container styling
 .add-new-tour-container {
   width: 100%;
   max-width: 700px;
@@ -24,7 +24,7 @@
 }
 
 /* Form styling */
-form {
+.form1111 {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
