--- a/Frontend/TripSync/src/pages/AllAgencies/AllAgencies.css
+++ b/Frontend/TripSync/src/pages/AllAgencies/AllAgencies.css
@@ -1,4 +1,4 @@
-.search{
+/* .search{
     margin: 50px;
     padding: 5px;
     border-radius: 7px;
@@ -12,7 +12,7 @@
     margin: 50px;
     font-size: 25px; 
 }
-/* AllAgencies.css */
+
 .agency-card-container {
     cursor: pointer;
   }
@@ -22,4 +22,4 @@
     transform: scale(1.02);
     transition: all 0.3s ease;
   }
-  
+   */
